smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-after-shape.smithy
// Parse error at line 6, column 4 near ` smithy`: A use statement must come before any shape definition
namespace smithy.example

string MyString

use smithy.api#String
